[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-openai>=0.3.14",
    "openai>=1.76.0",
    "pypdf2>=3.0.1",
    "streamlit>=1.44.1",
]
